fixing issue RHS FAB shows on top of LHS FAB on mobile

--- a/webapp/src/css/inbox.less
+++ b/webapp/src/css/inbox.less
@@ -1739,6 +1739,14 @@ mm-search-bar {
     left: 100%;
   }
 
+  .app-root:not(.show-content) {
+    .right-pane {
+      .fast-action-trigger {
+        display: none;
+      }
+    }
+  }
+
   .app-root.show-content {
     .header,
     mm-multiselect-bar,
